Fix overflow-x bug

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ body {
   padding: 0;
   min-width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 main {
